<resources>
    <string name="app_name">Sportive</string>
    <string name="title_activity_maps">Map</string>

    <string name="forgot_password">forgot_password</string>
    <string name="log_in">log_in</string>
    <string name="login">login</string>
    <string name="sign_up">Sign up</string>
    <string name="enter_your_email">enter_your_email</string>
    <string name="name">Name</string>
    <string name="mobile_number">mobile_number</string>
    <string name="center">Center</string>
    <string name="user">User</string>
    <string name="already_have_account">already_have_account</string>
    <string name="your_location">your location</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="full_name">Full name</string>
    <string name="edite">Edite</string>
    <string name="change">Change</string>
    <string name="_40_km">40 km</string>
    <string name="center_name">Center name</string>
    <string name="type_of_center">type of center</string>
    <string name="_40km_nearby">40km nearby</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_center_home">CenterHomeActivity</string>
    <string name="contact_us">Contact us</string>
    <string name="edit_profile">Edit profile</string>
    <string name="log_out">Log out</string>
    <string name="edit">edit</string>
    <string name="title_activity_maps_new">Map</string>
    <string name="join">Join</string>
    <string name="game">Game</string>
    <string name="trainer">Trainer</string>
    <string name="add">Add</string>
    <string name="enter_the_name_of_game">Enter the name of game</string>
    <string name="enter_the_name_of_trainer">Enter the name of Trainer</string>
    <string name="enter_your_message">Enter your Message</string>
    <string name="pay_cash">Pay cash</string>
    <string name="pay_online">Pay online</string>
    <string name="my_centers">My centers</string>
    <string name="about_us">About us</string>
    <string name="send">send</string>
    <string name="personal">Personal</string>
    <string name="profile">Profile</string>
    <string name="save">Save</string>
    <string name="add_game">Add Game</string>
    <string name="description">Description</string>
    <string name="history">History</string>
    <string name="upload_images">Upload Images</string>
    <string name="centers">Centers</string>
    <string name="add_comment_and_rate">Add comment and rate</string>
    <string name="rate_now">Rate Now</string>
    <string name="write_comment">Write Comment</string>
    <string name="confirm">Confirm</string>
    <string name="rating">rating</string>
    <string name="submit">submit</string>

    <string-array name="type">
        <item name="Update" />
        <item name="Message" />
        <item name="Rating" />
        <item name="Comment" />
    </string-array>
    <string name="title_activity_trainer_home">TrainerHomeActivity</string>
    <string name="linkedin_url">Linkedin URL</string>
    <string name="my_game">My game</string>
    <string name="services">Services</string>
    <string name="facebook">Facebook</string>
    <string name="website">Website</string>
    <string name="facebook_url">Facebook URL</string>
    <string name="website_url">WebSite URL</string>

</resources>
