<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.AddGameActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/blue"
        android:id="@+id/abb_bar_add_game">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/add_game_toolbar">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/add_game"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
            </RelativeLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/abb_bar_add_game"
        android:orientation="vertical">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/edit_text"
            android:hint="@string/enter_the_name_of_game"
            android:paddingStart="5dp"
            android:id="@+id/edit_game"
            android:layout_margin="5dp"
            android:paddingEnd="5dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/edit_trainer"
            android:layout_margin="5dp"
            android:background="@drawable/edit_text"
            android:hint="@string/enter_the_name_of_trainer"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:id="@+id/dialog_btn"
            android:background="@drawable/button_design_curv_orange"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:text="@string/add"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"
            android:textColor="@color/white"/>

    </LinearLayout>

</RelativeLayout>